Version 4.3 - Dictionary Audio
Added fields for Word audio URLs and update admin and user endpoints to work with audio
